fixing visibility issue

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 
 .center { text-align: center; }
 
-section { padding: 9rem 0; }
+section { padding: 5.5rem 0; }
 
 .section__header {
     font-size: 3.5rem;
@@ -79,8 +79,6 @@ a {
     font-size: 6rem;
 }
 
-.navigation .navigation__checkbox { display: none; }
-
 .navigation .navigation__btn {
     background-color: #f0f0f0;
     height: 5rem;
@@ -103,7 +101,7 @@ a {
     right: 4.5rem;
     background-image: linear-gradient( to right bottom, #c72c41, #801336);
     z-index: 999;
-    transition: transform .8s cubic-bezier(0.86, 0, .45, 1);
+    transition: transform .8s cubic-bezier(0.87, 0, 0.02, 1.1);
 }
 
 .navigation .navigation__nav {
@@ -111,8 +109,10 @@ a {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
     z-index: 1500;
+    opacity: 0;
+    width: 0;
+    transition: all .8s cubic-bezier(0.68, -0.55, 0.2, 1.5);
 }
 
 .navigation .navigation__list {
@@ -121,10 +121,8 @@ a {
     left: 50%;
     transform: translate(-50%, -50%);
     list-style: none;
-    width: 100%;
     text-align: center;
-    display: none;
-    transition: all .8s cubic-bezier(0.68, -0.55, 0.2, 1.5);
+    width: 100%;
 }
 
 .navigation .navigation__item { margin: 1.8rem 0; }
@@ -175,8 +173,9 @@ a {
 
 .open { transform: scale(140); }
 
-.menu.navigation__list {
-    display: block;
+.menu.navigation__nav {
+    opacity: 1;
+    width: 100%;
 }
 
 .change #bar2 { background: transparent; }
@@ -270,7 +269,7 @@ a {
     font-size: 2.5rem;
     margin: 0 .5rem;
     text-align: center;
-    transition: all .5s;
+    transition: transform .5s;
 }
 
 .projects__card-links a:hover {
